--- a/favorite-things.html
+++ b/favorite-things.html
@@ -16,15 +16,35 @@
           <img src="img/christopher.jpg" alt= "A photo of Christopher.">
         </a>
       </li>
-      <li>My brother Christopher</li>
-      <li>My mom and dad:
+      <li>
+        My mom and dad:
         <ul>
-          <li>Steve</li>
-          <li>Carol</li>
+          <li>
+            <a href="http://www.example.com/steve.html">
+              <strong>Steve</strong>
+              <img src="img/steve.jpg" alt= "A photo of Steve.">
+            </a>
+          </li>
+          <li>
+            <a href="http://www.example.com/carol.html">
+            <strong>Carol</strong>
+            <img src="img/carol.jpg" alt="A photo of Carol.">
+            </a>
+          </li>
         </ul>
       </li>
-      <li>My friend Jessica</li>
-      <li>My friend Candy</li>
+      <li>
+        <a href="http://www.example.com/jessica.html">
+          My friend <strong>Jessica</strong>
+          <img src="img/jessica.jpg" alt="A photo of Jessica.">
+        </a>
+      </li>
+      <li>
+        <a href="http://www.example.com/candy.html">
+        My friend <strong>Candy</strong>
+        <img src="img/candy.jpg" alt="A photo of Candy.">
+        </a>
+      </li>
     </ul>
 
     <h3>Flavors of ice cream</h3>
