--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -20,6 +20,6 @@
       <li>And a lot more!</li>
     </ul>
     <p> Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
-    <p>Check out <a href="https://www.epicodus.com/">Epicodus</a>. It's a great school for learning programming!</p>
+    <p>Check out <a href="https://www.epicodus.com/">Epicodus</a>. It's a great school for learning <em>programming</em>!</p>
   </body>
 </html>
